[tool.poetry]
name = "package-welcome"
version = "0.1.0"
description = ""
authors = ["Всеволод Деменьшин <vdexpert11@yandex.ru>"]
readme = "README.md"
packages = [{include = "package_welcome"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
do-something = 'package_welcome.welcomee:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
